# done-soon

./: .dockerignore  .gitignore  .gitmodules  Analysis.ipynb  Dockerfile  Dockerfile.solver  Done Soon Sanity Check.ipynb  README.md  Snakefile  build-apptainer-sif.sh  classifiers.ipynb  data-exploration.ipynb  devbox.json  docker-compose.datagen.yaml  docker-compose.yaml  environment.yaml  environment.yml  pyproject.toml  requirements.txt  run-solver.py
config/: config.yaml
data-generation/: main.py  output.db
data_generation/: README.md  create-initial-db.py  db_schema.md  multicore.sh  output.db  output_ref.md  run_solver.py
done_soon/data_generation/: Dockerfile.solver  README.md  __init__.py  create-initial-db.py  data_gen_worker.py  db_datastructs.py  db_functions.py  generate_data.py  minizinc_output_ref.md  multicore.sh  run_solver.py  solve_problem.py
notebooks/: Done Soon Sanity Check.ipynb  analysis.ipynb  classifiers.ipynb  plots.ipynb
notebooks/2024/: ablation_problem_data_usage.ipynb  analysis_static.ipynb  analysis_template.ipynb  paper.ipynb  run_ablation.fish  run_ablation_halved.fish  run_base_experiment.fish  run_base_experiment_halved.fish
notebooks/analysis/: cross_validate.py  generate_targets.py  output_to_features_at_percent.py  problem_summary.py
plots/feature-over-time/: run_solver.py  unsolved_result.json
problems/: add-problem-type.py  convert_cnf.py  download.py  download.sh  index-types.py  reorganize-problems.py
resources/download/: get_archive_links.py  links-minizinc_challenges.json  links-miplib.json  links-satlib.json
tests/: conftest.py  test_data_gen_worker.py  test_mongo_run_solver.py  test_run_solver.py  test_solve_problem.py
tests/resources/: test.dzn  (+2 more)
workflow/: Snakefile
(+1320 files in other folders)
