[tool.poetry]
name = "done-soon"
version = "0.2.0"
description = "A project to attempt to develop a classifier for predicting whether the LCG solver `chuffed` will find a solution before a certain time limit."
authors = [
    "Reuben Gardos Reid <5456207+ReubenJ@users.noreply.github.com>",
    "Pierre Bongrand <32721979+BuenoGrande@users.noreply.github.com>",
    "Alexander Freeman <alexander.freeman.nl@gmail.com>",
    "Siân Hallsworth <99820855+s-hallsworth@users.noreply.github.com>"
]
readme = "README.md"
packages = [{include = "done_soon"}]

[tool.poetry.dependencies]
python = "^3.10"
dacite = "^1.6.0"
tqdm = "^4.64.1"
pymongo = "^4.3.2"
rich = "^12.6.0"
psutil = "^5.9.3"

[tool.poetry.group.dev.dependencies]
mongomock = "^4.1.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
autopep8 = "^1.7.0"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    invalid-name
    """