[tool.poetry]
name = "done-soon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
scipy = "^1.11.3"
rich = "^13.6.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
seaborn = "^0.13.0"
matplotlib = "~3.5"
ipykernel = "^6.26.0"
tikzplotlib = "^0.10.1"
tabulate = "^0.9.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
